[package]
name = "twba-code-receiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twba-backup-config = { version = "0.1.3", git = "https://github.com/OMGeeky/backup_config.git" }
hyper = { version = "0.14", features = ["full", "server"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
